# bacre_2D

./: .gitignore  LICENSE  README.md  launch_local_worker_astar_trav_2D_v1.sh  launch_local_worker_astar_trav_2D_v2.sh  launch_remote_worker_astar_trav_2D_v1.sh  launch_remote_worker_astar_trav_2D_v2.sh
adversarial_scene_gen/: package.xml  setup.cfg  setup.py
adversarial_scene_gen/adversarial_scene_gen/: bacre_2D_astar_trav_node.py
adversarial_scene_gen/launch/: bacre_2D_astar_trav_simple_controller_launch.py  rosbridge_pc0_launch.py  rosbridge_pc1_launch.py
astar_trav/: package.xml  setup.cfg  setup.py
astar_trav/astar_trav/: astar_trav_2D_all_in_one_node.py  astar_trav_2D_mapping_node.py  astar_trav_2D_planning_node.py  astar_voting_path_planner.py  semantic_segmentation.py  semseg_networks.py  simple_path_follower_node.py  video_utils.py
astar_trav/astar_trav/Datasets_256x256/NoClouds_Trees_Bushes_SunIncl0-15-30-45-60-75-90/: FrameNumber.json  info.txt
astar_trav/astar_trav/Datasets_256x256/NoClouds_Trees_Bushes_SunIncl0-15-30-45-60-75-90/models/small_v2/: training_info.txt  training_losses.csv  validation_idx.csv
astar_trav/launch/: worker_astar_trav_2D_v1_launch.py  worker_astar_trav_2D_v2_launch.py
astar_trav_msgs/: CMakeLists.txt  package.xml
astar_trav_msgs/msg/: MapState2D.msg
auto_scene_gen_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
auto_scene_gen_core/auto_scene_gen_core/: client_node.py  ros_image_converter.py  scenario_builder.py  stamp_utils.py  vehicle_node.py
auto_scene_gen_core/include/auto_scene_gen_core/: vehicle_node.hpp
auto_scene_gen_core/src/: vehicle_node.cpp
auto_scene_gen_msgs/: CMakeLists.txt  package.xml
auto_scene_gen_msgs/msg/: LandscapeDescription.msg  OdometryWithoutCovariance.msg  PhysXControl.msg  SceneCaptureSettings.msg  SceneDescription.msg  StatusCode.msg  StructuralSceneActorLayout.msg  VehicleNodeOperatingInfo.msg  VehicleStatus.msg
auto_scene_gen_msgs/srv/: AnalyzeScenario.srv  NotifyReady.srv  RegisterVehicleNode.srv  RunScenario.srv  SceneCapture.srv  WorkerIssueNotification.srv
experiment_parameters/: av1_parameters.txt  av2_parameters.txt  av3_parameters.txt  av4_parameters.txt
